--- a/public/index.html
+++ b/public/index.html
@@ -9,22 +9,23 @@
   <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
 </head>
 <body>
-
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
 
-      <a class="navbar-brand" href="#">🎵 MiMúsica</a>
+      <a class="navbar-brand" href="index.html"> <img alt="Icono" class="iconnavbar" src="../images/iconowhite.png"> AttoMusic </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto align-items-center">
-          <li class="nav-item"><a class="nav-link load-page" href="calificar.html">Calificar Canciones</a></li>
-          <li class="nav-item"><a class="nav-link load-page" href="#">Comentar Canciones</a></li>
-          <li class="nav-item"><a class="nav-link load-page" href="#">Recomendar Canciones</a></li>
-          <li class="nav-item"><a class="nav-link load-page" href="#">Sinapsis</a></li>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto align-items-center">
+            <li class="nav-item"><a class="nav-link load-page" href="#"> Iniciar Sesión </a></li>
+            <li class="nav-item"><a class="nav-link load-page" href="#"> Registrarse </a></li>
+            <li class="nav-item"><a class="nav-link load-page" href="canciones.html">Canciones</a></li>
+            <li class="nav-item"><a class="nav-link load-page" href="playlists.html">Playlists</a></li>
+            <li class="nav-item"><a class="nav-link load-page" href="perfiles.html"> Perfiles </a></li>
+            <li class="nav-item"><a class="nav-link load-page" href="noticias.html"> Noticias </a></li>
 
           <li class="nav-item d-flex align-items-center">
             <input type="text" class="search-input" id="searchInput" placeholder="Buscar...">
@@ -38,7 +39,7 @@
               <img src="https://i.pravatar.cc/150?img=12" alt="Perfil" class="profile-pic">
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="#">Ver Perfil</a></li>
+              <li><a class="dropdown-item" href="perfil.html">Ver Perfil</a></li>
               <li><a class="dropdown-item" href="#">Configuración</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item text-danger" href="#">Cerrar Sesión</a></li>
