--- a/public/bienvenido.html
+++ b/public/bienvenido.html
@@ -1,1 +1,37 @@
-<h1>Bienvenido a AttoMusic :D</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>AttoMusic</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+  <link rel="shortcut icon" href="../images/icono.png" type="image/x-icon">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
+  
+</head>
+<body>
+
+
+  <div style="text-align: center;">
+    <img src="../images/iconogray.png" alt="Icono" class="icon">
+  
+
+  <p class="title"> ¿Qué haz escuchado? </p><br>
+
+  <button type="button" class="btn btn-primary btn-lg"> Agregar cancion a escuchados</button>
+
+
+  <p class="normaltext"> Acá va a estar como el incio, el fyp, como en twitter, que le salgan las ultimas reseñas de la gente que siga o que le interese
+    y todo eso (nose si al final podamos hacer eso) </p>
+
+
+
+
+  </div>
+  
+
+</body>
+</html>
