--- a/images/registro.html
+++ b/images/registro.html
@@ -9,11 +9,12 @@
 </head>
 <body class="bodyII">
     <div class="d-flex flex-column bd-highlight mb-3">
+    <form action="app.js">
         <div class="p-2 bd-highlight">
-            <h1>Attomusic</h1>
+            <h1 class="h1I">Attomusic</h1>
         </div>
         <div class="p-2 bd-highlight">
-            <h2>Registro</h2>
+            <h2 class="h2I">Registro</h2>
         </div>
         <div class=" bd-highlight">
             <label for="Nombre"><h2>Nombre</h2></label>
@@ -36,12 +37,12 @@
             <input value="Contraseña" type="text" id="Contraseña" name="Contraseña">
         </div>
         <div class="p-2 bd-highlight">
-            <h3><a href="">Ya tengo secion</a></h3>
+            <h3><a href="" class="aI">Ya tengo secion</a></h3>
         </div>
         <div class="p-2 bd-highlight">
-            <div class="Boton">
-            <input value="Registro" type="submit" class="Botone">
+            <button type="submit">Enviar</button>
         </div>
-    </div>
+    </form>
+</div>
 </body>
 </html>
