--- a/public/index.html
+++ b/public/index.html
@@ -39,10 +39,10 @@
               <img src="https://i.pravatar.cc/150?img=12" alt="Perfil" class="profile-pic">
             </a>
             <ul class="dropdown-menu dropdown-menu-end">
-              <li><a class="dropdown-item" href="perfil.html">Ver Perfil</a></li>
-              <li><a class="dropdown-item" href="#">Configuración</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item text-danger" href="#">Cerrar Sesión</a></li>
+              <li><a class="dropdown-item load-page" href="perfil.html">Ver Perfil</a></li>
+              <li><a class="dropdown-item load-page" href="#">Configuración</a></li>
+              <li><hr class="dropdown-divider load-page"></li>
+              <li><a class="dropdown-item text-danger load-page" href="#">Cerrar Sesión</a></li>
             </ul>
           </li>
         </ul>
