--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
 
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto align-items-center">
-            <li class="nav-item"><a class="nav-link load-page" href="#"> Iniciar Sesión </a></li>
-            <li class="nav-item"><a class="nav-link load-page" href="#"> Registrarse </a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#loginModal"> Iniciar Sesión </a></li>
+            <li class="nav-item"><a class="nav-link" href="#" data-bs-toggle="modal" data-bs-target="#registroModal"> Registrarse </a></li>
             <li class="nav-item"><a class="nav-link load-page" href="canciones.html">Canciones</a></li>
             <li class="nav-item"><a class="nav-link load-page" href="playlists.html">Playlists</a></li>
             <li class="nav-item"><a class="nav-link load-page" href="perfiles.html"> Perfiles </a></li>
@@ -54,47 +54,115 @@
     <iframe id="contentFrame" src="bienvenido.html" style="width:100%; height:80vh; border:none;"></iframe>
   </div>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      //Animar Búsqueda
-        const searchBtn = document.getElementById("searchBtn");
-        const searchInput = document.getElementById("searchInput");
+  <div class="modal fade" id="loginModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content p-0 border-0 bg-transparent">
+      <div class="formulario">
+        <h1>ATTOMUSIC</h1>
+        <h2>Inicio de sesión</h2>
+        <form method="post">
+          <div class="username">
+            <input type="text" required>
+            <label>Usuario</label>
+          </div>
+          <div class="username">
+            <input type="password" required>
+            <label>Contraseña</label>
+          </div>
+          <div class="recordar">¿Olvidó su Contraseña?</div>
+          <input type="submit" value="Iniciar Sesion">
+          <div class="registrate">
+            ¿No tienes una cuenta? <a href="#" data-bs-toggle="modal" data-bs-target="#registroModal" data-bs-dismiss="modal" class="aI">Regístrate</a>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
 
-        searchBtn.addEventListener("click", () => {
-            searchInput.classList.toggle("active");
-            if (searchInput.classList.contains("active")) {
-            searchInput.focus();
-            }
-        });
-    </script>
-    <script>
-       // Función para cargar páginas en el iframe
-        function loadPage(url) {
-            const frame = document.getElementById("contentFrame");
-            frame.src = url; // cambia la página que se muestra en el iframe
-        }
+<div class="modal fade" id="registroModal" tabindex="-1" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content p-0 border-0 bg-transparent">
+      <div class="formulario">
+        <h1>ATTOMUSIC</h1>
+        <h2>Registro</h2>
+        <form method="post">
+          
+          <div class="username">
+            <input type="text" required>
+            <label>Nombre</label>
+          </div>
 
-        // Asignar evento a los links
-        document.querySelectorAll(".load-page").forEach(link => {
-            link.addEventListener("click", function(e) {
-                e.preventDefault(); // evita que cambie de página
-                const href = this.getAttribute("href");
-                if(href !== "#") { // evita enlaces vacíos
-                    loadPage(href);
-                }
-            });
-        });
+          <div class="username">
+            <input type="number" min="1" max="120" required>
+            <label>Edad</label>
+          </div>
 
-        const frame = document.getElementById("contentFrame");
-        frame.onload = function() {
-            try {
-                // Ajusta el alto del iframe al contenido
-                frame.style.height = frame.contentWindow.document.body.scrollHeight + "px";
-            } catch(e) {
-                // Esto falla si la página cargada es de otro dominio
-                console.warn("No se puede ajustar altura automáticamente por CORS.");
-            }
-        };
-    </script>
+          <div class="username">
+            <input type="email" required>
+            <label>Correo electrónico</label>
+          </div>
+
+          <div class="username">
+            <input type="password" required>
+            <label>Contraseña</label>
+          </div>
+
+          <div class="recordar">
+            <a href="#" data-bs-toggle="modal" data-bs-target="#loginModal" data-bs-dismiss="modal" class="aI">
+              ¿Ya tienes cuenta? Inicia sesión
+            </a>
+          </div>
+
+          <input type="submit" value="Registrarse">
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="../app.js"></script>
+  <script>
+    //Animar Búsqueda
+      const searchBtn = document.getElementById("searchBtn");
+      const searchInput = document.getElementById("searchInput");
+
+      searchBtn.addEventListener("click", () => {
+          searchInput.classList.toggle("active");
+          if (searchInput.classList.contains("active")) {
+          searchInput.focus();
+          }
+      });
+  </script>
+  <script>
+      // Función para cargar páginas en el iframe
+      function loadPage(url) {
+          const frame = document.getElementById("contentFrame");
+          frame.src = url; // cambia la página que se muestra en el iframe
+      }
+
+      // Asignar evento a los links
+      document.querySelectorAll(".load-page").forEach(link => {
+          link.addEventListener("click", function(e) {
+              e.preventDefault(); // evita que cambie de página
+              const href = this.getAttribute("href");
+              if(href !== "#") { // evita enlaces vacíos
+                  loadPage(href);
+              }
+          });
+      });
+
+      const frame = document.getElementById("contentFrame");
+      frame.onload = function() {
+          try {
+              // Ajusta el alto del iframe al contenido
+              frame.style.height = frame.contentWindow.document.body.scrollHeight + "px";
+          } catch(e) {
+              // Esto falla si la página cargada es de otro dominio
+              console.warn("No se puede ajustar altura automáticamente por CORS.");
+          }
+      };
+  </script>
 </body>
 </html>
