--- a/public/buscador.html
+++ b/public/buscador.html
@@ -4,103 +4,16 @@
 <head>
   <meta charset="UTF-8">
   <title>Resultados de búsqueda - AttoMusic</title>
-  <style>
-    html, body {
-      height: 100%;
-      margin: 0;
-      padding: 0;
-      width: 100%;
-    }
-    body {
-      color: #030303;
-      font-family: Arial, sans-serif;
-      padding: 32px 24px 24px 24px;
-      min-height: 100vh;
-      box-sizing: border-box;
-      width: 100vw;
-      overflow-x: hidden;
-    }
-    .results {
-      margin-top: 20px;
-      display: flex;
-      flex-wrap: wrap;
-      gap: 30px;
-      justify-content: flex-start;
-      width: 100%;
-      box-sizing: border-box;
-    }
-    .card {
-      background: #fff;
-      padding: 18px 18px 12px 18px;
-      border-radius: 18px;
-      text-align: center;
-      box-shadow: 0 4px 16px rgba(90,24,154,0.12), 0 1.5px 6px rgba(0,223,252,0.10);
-      transition: transform 0.2s, box-shadow 0.2s;
-      width: 210px;
-      min-height: 320px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-    }
-    .card:hover {
-      transform: translateY(-6px) scale(1.04);
-      box-shadow: 0 8px 32px rgba(90,24,154,0.18), 0 3px 12px rgba(0,223,252,0.18);
-    }
-    .card img {
-      width: 160px;
-      height: 160px;
-      object-fit: cover;
-      border-radius: 12px;
-      margin-bottom: 12px;
-      box-shadow: 0 2px 8px rgba(90,24,154,0.10);
-    }
-    .card h3 {
-      font-size: 1.1rem;
-      font-weight: 700;
-      color: #5a189a;
-      margin-bottom: 8px;
-      margin-top: 0;
-      text-shadow: 0 1px 2px #e0e0e0;
-    }
-    .card p {
-      font-size: 0.95rem;
-      color: #333;
-      margin: 4px 0;
-    }
-    audio {
-      margin-top: 10px;
-      width: 100%;
-      border-radius: 8px;
-      background: #f3f3f3;
-    }
-    h2 {
-      color: #5a189a;
-      margin-bottom: 18px;
-      font-size: 2rem;
-      font-weight: 900;
-      display: flex;
-      align-items: center;
-      gap: 8px;
-    }
-    h3 {
-      color: #ba01ff;
-      margin-top: 24px;
-      margin-bottom: 10px;
-      font-size: 1.3rem;
-      font-weight: 700;
-      text-align: left;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h2>🔎 Resultados de búsqueda</h2>
-  <h3>Canciones</h3>
-  <div id="results-tracks" class="results"></div>
-  <h3>Artistas</h3>
-  <div id="results-artists" class="results"></div>
-  <h3>Álbumes</h3>
-  <div id="results-albums" class="results"></div>
+  <h2 class="search-results-title">🔎 Resultados de búsqueda</h2>
+  <h3 class="search-section-title">Canciones</h3>
+  <div id="results-tracks" class="search-results"></div>
+  <h3 class="search-section-title">Artistas</h3>
+  <div id="results-artists" class="search-results"></div>
+  <h3 class="search-section-title">Álbumes</h3>
+  <div id="results-albums" class="search-results"></div>
 
   <script>
     async function runSearch() {
@@ -134,12 +47,11 @@
       }
       items.forEach(item => {
         const div = document.createElement("div");
-        div.className = "card";
+        div.className = "search-card";
         let img = "";
-  if (item.album?.images?.[0]?.url) img = item.album.images[0].url;
-  else if (item.images?.[0]?.url) img = item.images[0].url;
-  // Si la imagen es de tu servidor, usa la ruta relativa correcta
-  if (img && img.startsWith('icono')) img = 'images/' + img;
+        if (item.album?.images?.[0]?.url) img = item.album.images[0].url;
+        else if (item.images?.[0]?.url) img = item.images[0].url;
+        if (img && img.startsWith('icono')) img = 'images/' + img;
         div.innerHTML = `
           <h3>${item.name}</h3>
           ${img ? `<img src="${img}" alt="cover">` : ""}
@@ -161,10 +73,10 @@
       }
       items.forEach(item => {
         const div = document.createElement("div");
-        div.className = "card";
+        div.className = "search-card";
         let img = "";
-  if (item.images?.[0]?.url) img = item.images[0].url;
-  if (img && img.startsWith('icono')) img = 'images/' + img;
+        if (item.images?.[0]?.url) img = item.images[0].url;
+        if (img && img.startsWith('icono')) img = 'images/' + img;
         div.innerHTML = `
           <h3>${item.name}</h3>
           ${img ? `<img src="${img}" alt="cover">` : ""}
@@ -184,10 +96,10 @@
       }
       items.forEach(item => {
         const div = document.createElement("div");
-        div.className = "card";
+        div.className = "search-card";
         let img = "";
-  if (item.images?.[0]?.url) img = item.images[0].url;
-  if (img && img.startsWith('icono')) img = 'images/' + img;
+        if (item.images?.[0]?.url) img = item.images[0].url;
+        if (img && img.startsWith('icono')) img = 'images/' + img;
         div.innerHTML = `
           <h3>${item.name}</h3>
           ${img ? `<img src="${img}" alt="cover">` : ""}
