--- a/public/bienvenido.html
+++ b/public/bienvenido.html
@@ -6,7 +6,7 @@
   <title>AttoMusic</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="../images/icono.png" type="image/x-icon">
+  <link rel="shortcut icon" href="images/icono.png" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">
@@ -16,7 +16,7 @@
 
 
   <div style="text-align: center;">
-    <img src="../images/iconogray.png" alt="Icono" class="icon">
+    <img src="images/iconogray.png" alt="Icono" class="icon">
   
 
   <p class="title"> ¿Qué haz escuchado? </p><br>
