--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
   <title>AttoMusic</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="../images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 </head>
 <body>
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container-fluid">
 
-  <a class="navbar-brand" href="index.html"> <img alt="Icono" class="iconnavbar" src="../images/iconowhite.png"> AttoMusic </a>
+  <a class="navbar-brand" href="index.html"> <img alt="Icono" class="iconnavbar" src="images/iconowhite.png"> AttoMusic </a>
 
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
