--- a/public/buscador.html
+++ b/public/buscador.html
@@ -61,10 +61,48 @@
         `;
         div.style.cursor = "pointer";
         div.addEventListener("click", () => {
-          window.location.href = `cancion.html?id=${item.id}`;
+          mostrarDetalleCancion(item.id);
         });
         container.appendChild(div);
       });
+
+      // Función para mostrar detalle de canción en el mismo div
+      async function mostrarDetalleCancion(id) {
+        const main = document.getElementById("results-tracks").parentElement.parentElement;
+        main.innerHTML = `<div style="display:flex;justify-content:center;align-items:center;min-height:60vh;"><div class='search-card' id='detalle-cancion' style='max-width:400px;width:100%;margin:auto;'></div></div>`;
+        const detalle = document.getElementById('detalle-cancion');
+        detalle.innerHTML = `<div style='text-align:center;color:#5a189a;font-size:1.5rem;'>Cargando...</div>`;
+        const res = await fetch(`https://attomusic.onrender.com/track/${id}`);
+        const track = await res.json();
+        let img = track.album?.images?.[0]?.url || "";
+        detalle.innerHTML = `
+          <button id='volver-btn' class='btn btn-outline-primary' style='margin-bottom:18px;background:linear-gradient(160deg,#ba01ff,#00dffc);color:white;border:none;'>⟵ Volver a resultados</button>
+          <h2 style='color:#5a189a;'>${track.name}</h2>
+          ${img ? `<img src='${img}' alt='cover' style='width:180px;height:180px;border-radius:12px;margin-bottom:12px;'>` : ""}
+          <p style='color:#ba01ff;font-weight:700;'>👩‍🎤 ${track.artists.map(a => a.name).join(", ")}</p>
+          <p>💿 Álbum: ${track.album?.name || ""}</p>
+          <p>📅 ${track.album?.release_date || ""}</p>
+          <p>🔥 Popularidad: ${track.popularity}</p>
+          ${track.preview_url ? `<audio controls src='${track.preview_url}' style='width:100%;margin-top:10px;'></audio>` : `<p>⚠️ No hay preview disponible</p>`}
+          <div style='margin-top:18px;'>
+            <h4 style='color:#ba01ff;'>Califica esta canción</h4>
+            <form id='calificar-form'>
+              <input type='number' id='calificacion' name='calificacion' min='1' max='5' required style='width:60px;border-radius:8px;border:1px solid #ba01ff;'>
+              <button type='submit' class='btn btn-primary' style='margin-left:10px;background:linear-gradient(160deg,#ba01ff,#00dffc);border:none;'>Enviar</button>
+            </form>
+            <div id='calificacion-result'></div>
+          </div>
+        `;
+        document.getElementById('volver-btn').onclick = () => {
+          // Recargar resultados de búsqueda
+          runSearch();
+        };
+        document.getElementById("calificar-form").addEventListener("submit", function(e) {
+          e.preventDefault();
+          const val = document.getElementById("calificacion").value;
+          document.getElementById("calificacion-result").innerHTML = `<p style='color:#5a189a;'>¡Gracias! Calificaste esta canción con <b>${val}</b> estrellas.</p>`;
+        });
+      }
     }
 
     function mostrarArtistas(items) {
