--- a/public/canciones.html
+++ b/public/canciones.html
@@ -31,28 +31,38 @@ async function cargarCancionesPopulares() {
   const cont = document.getElementById("generos-canciones");
   cont.innerHTML = "<div style='text-align:center;color:#5a189a;font-size:1.3rem;'>Cargando canciones populares...</div>";
   let html = "";
+  let allTracks = [];
   for (const genero of generos) {
-    // Busca canciones populares del género
     const res = await fetch(`https://attomusic.onrender.com/search?q=${encodeURIComponent(genero.query)}&type=track&limit=6`);
     const data = await res.json();
     const tracks = data.tracks?.items || [];
     if (tracks.length > 0) {
       html += `<h3 style='color:#ba01ff;margin-top:32px;'>${genero.nombre}</h3><div class='row' style='margin-bottom:24px;'>`;
-      tracks.forEach(track => {
+      tracks.forEach((track, idx) => {
         let img = track.album?.images?.[0]?.url || "";
+        // Asigna un id único a cada tarjeta
+        const cardId = `card-${genero.nombre.replace(/\s/g,'')}-${idx}`;
         html += `<div class='col-md-4 col-lg-2' style='margin-bottom:18px;'>
-          <div class='search-card' style='cursor:pointer;' onclick='mostrarDetalleCancion("${track.id}")'>
+          <div class='search-card' id='${cardId}' style='cursor:pointer;'>
             <h4 style='color:#5a189a;font-size:1.1rem;'>${track.name}</h4>
             ${img ? `<img src='${img}' alt='cover' style='width:100px;height:100px;border-radius:12px;margin-bottom:8px;'>` : ""}
             <p style='color:#ba01ff;font-size:0.95rem;'>${track.artists.map(a => a.name).join(", ")}</p>
             <p style='font-size:0.9rem;'>🔥 Popularidad: ${track.popularity}</p>
           </div>
         </div>`;
+        allTracks.push({ cardId, track });
       });
       html += `</div>`;
     }
   }
   cont.innerHTML = html || "<div style='text-align:center;color:#ba01ff;font-size:1.2rem;'>No se encontraron canciones populares.</div>";
+  // Asigna eventos click a cada tarjeta
+  allTracks.forEach(({ cardId, track }) => {
+    const card = document.getElementById(cardId);
+    if (card) {
+      card.addEventListener('click', () => mostrarDetalleCancion(track.id));
+    }
+  });
 }
 
 // Muestra el detalle de la canción, calificación y comentario
