--- a/public/canciones.html
+++ b/public/canciones.html
@@ -1,3 +1,5 @@
+// Ejecuta la carga de canciones populares siempre, tanto en carga directa como por SPA
+cargarCancionesPopulares();
 <!DOCTYPE html>
 <html lang="es">
 <head>
